# iSpan_LLM-Agent-cookbooks

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  PROGRESS_SUMMARY.md  README.md  TODO.md  demo.py  demo_advanced_patterns.py  demo_simple.py  env.example  fix_sqlite.py  pyproject.toml  requirements.txt  setup.py  test_agent_debug.py  training_data.jsonl  課程內容.md
01_Framework基礎/Week_01-02_Reflection_Pattern/: lecture_notes.md
01_Framework基礎/Week_01-02_Reflection_Pattern/lab/: README.md  lab_1.md
02_Processes_Crews/Week_03-04_Planning_Pattern/: lecture_notes.md
02_Processes_Crews/Week_03-04_Planning_Pattern/lab/: README.md  lab_2.md
03_Flows/Week_05-06_Dynamic_Planning/: lecture_notes.md
04_Tools_Memory/Week_07-08_Tool_Use_Pattern/lab/: README.md  lab_4.md
05_Knowledge_RAG/Week_09-10_RAG_and_Reflection/: lecture_notes.md
05_Knowledge_RAG/Week_09-10_RAG_and_Reflection/lab/: README.md  lab_5.md
06_Training_Testing/Week_11-12_Self_Training_Pipeline/: lecture_notes.md
docs/: agent-sdk-and-harness-engineering.md  harness-engineering-syllabus.md  syllabus.md  uv-usage-guide.md
docs/core/: agents_fundamentals.md  crews_fundamentals.md  memory_fundamentals.md  tasks_fundamentals.md
docs/patterns/: multi_agent.md  planning.md  reflection.md  tool_use.md
examples/: improved_weather_tool_demo.py  search_tool_example.py
infra/: Dockerfile  docker-compose.yml
infra/ci/: github-actions.yml
infra/observability/prometheus/: prometheus.yml
knowledge/: advanced_rag_concepts.txt
notebooks/: abraham_lincoln_full_content.txt  test.ipynb
src/: __init__.py
src/core/: __init__.py
src/core/agents/: __init__.py  agent_base.py  base_agent.py
src/core/crews/: __init__.py  crew_factory.py
src/core/flows/: __init__.py  flow_base.py
src/core/memory/: memory_manager.py
src/core/tasks/: task_base.py
src/core/tools/: README.md  __init__.py  code_interpreter_tool.py  coordinate_weather_tool.py  search_tool.py  tool_registry.py  weather_tool.py  web_search_tool.py
src/patterns/: __init__.py
src/patterns/multi_agent/: __init__.py  collaboration.py  communication.py  conflict_resolution.py  delegation_manager.py
src/patterns/planning/: planner_agent.py  wbs_planner.py
src/patterns/reflection/: __init__.py  critique_agent.py  self_critique.py  self_refine.py
src/patterns/tool_use/: README.md  __init__.py  decorators.py  examples.py  registry.py  robust_tool_wrapper.py  tool_chain.py  tool_selection.py  validation.py
src/pipelines/: __init__.py
src/templates/: agent_template.py  tool_template.py
tests/: conftest.py
tests/patterns/tool_use/: README.md  __init__.py  conftest.py  test_decorators.py  (+5 more)
work/labs/: README.md  WEEK01_VS_WEEK02_COMPARISON.md  import_helper.py
(+88 files in other folders)
